initial working phase